# gpuscatter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/: README.md  benchmark_sq3d.py  benchmark_sqw.py
docs/: algorithm.md
examples/: 01_static_sq3d.py  02_delta_pdf.py  03_dynamic_sqw_HK_plane.py  04_dynamic_sqw_BZ.py  05_dispersion_paths.py  README.md
gpuscatter/: __init__.py  delta_pdf.py  dispersion.py  form_factors.py  sq3d.py  sqw.py  trajectory.py
tests/: test_dispersion.py  test_form_factors.py  test_qgrids.py  test_sq3d_config.py
